--- a/my-first-web-page.html
+++ b/my-first-web-page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> <!--States the file is using HTML5-->
     <html> <!--Holds all content of webpage together-->
-        <head> <!--Contains data (that isnt shown on the actual webpage like page title and CSS styles))-->
+        <head> <!--Contains data (that isnt shown on the actual webpage like page title and CSS styles)-->
             <title> A04 Webpage</title> <!--Title of webpage (name of tab)-->
         </head>
 
@@ -21,3 +21,4 @@
     </body>
 
     </html>
+
